# deepbet

./: LICENSE  README.md  pyproject.toml
deepbet/: __init__.py  bet.py  utils.py
deepbet/interfaces/: cli.py  gui.py
deepbet/ui/: cli.py  gui.py
test/: test_bet.py
